tests/workspaces_test/workspaces_test.exp
Error -------------------------------------------------------- bar/index.js:8:46

Error: bar/index.js:8
  8: export const bWorkspaceType: WorkspaceType = 123; // Error: number ~> string
                                                  ^^^ Cannot assign `123` to `bWorkspaceType` because number [1] is incompatible with string [2].
  References:
    8: export const bWorkspaceType: WorkspaceType = 123; // Error: number ~> string
                                                    ^^^ [1]: number
    8: export const bWorkspaceType: WorkspaceType = 123; // Error: number ~> string
                                    ^^^^^^^^^^^^^ [2]: string

Error ------------------------------------------------------- foo/index.js:10:46

Error: foo/index.js:10
 10: export const bWorkspaceType: WorkspaceType = '123'; // Error: string ~> number
                                                  ^^^^^ Cannot assign `'123'` to `bWorkspaceType` because string [1] is incompatible with number [2].
  References:
   10: export const bWorkspaceType: WorkspaceType = '123'; // Error: string ~> number
                                                    ^^^^^ [1]: string
   10: export const bWorkspaceType: WorkspaceType = '123'; // Error: string ~> number
                                    ^^^^^^^^^^^^^ [2]: number


Found 2 errors
